[gd_scene load_steps=48 format=3 uid="uid://c1uk1snhdove5"]

[ext_resource type="Script" path="res://menu.gd" id="1_p4y0p"]
[ext_resource type="FontFile" uid="uid://dc526gcuwx4sa" path="res://fonts/DungeonFont.ttf" id="1_xyx7m"]
[ext_resource type="Texture2D" uid="uid://bsuhgwgrd4c8e" path="res://assets/WKRrf_.png" id="3_cnvbm"]
[ext_resource type="Texture2D" uid="uid://bovyki8otoa2v" path="res://2d_lights_and_shadows_neutral_point_light.png" id="3_u8np7"]
[ext_resource type="AudioStream" uid="uid://6mc0x5ctfosa" path="res://sound/misc_menu_4.wav" id="4_jsyvc"]
[ext_resource type="AudioStream" uid="uid://dhbhdebof7yib" path="res://sound/musica_menu.MP3" id="5_e55xy"]
[ext_resource type="Texture2D" uid="uid://f3k0pombk1ds" path="res://veigar.png" id="5_ht1gu"]
[ext_resource type="AudioStream" uid="uid://djumguwwjniub" path="res://Janji - Heroes Tonight (feat. Johnning) _ Progressive House _ NCS - Copyright Free Music.mp3" id="6_pcr67"]
[ext_resource type="Texture2D" uid="uid://bjn4i6rtx34ul" path="res://Screenshot_2024-09-22_152620-removebg-preview.png" id="7_ue8w4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sqt1k"]
atlas = ExtResource("3_cnvbm")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1wrp"]
atlas = ExtResource("3_cnvbm")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_g71gu"]
atlas = ExtResource("3_cnvbm")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_81mu0"]
atlas = ExtResource("3_cnvbm")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgmun"]
atlas = ExtResource("3_cnvbm")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv31a"]
atlas = ExtResource("3_cnvbm")
region = Rect2(0, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8xcu"]
atlas = ExtResource("3_cnvbm")
region = Rect2(250, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbmvb"]
atlas = ExtResource("3_cnvbm")
region = Rect2(500, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_v13jl"]
atlas = ExtResource("3_cnvbm")
region = Rect2(750, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_svuq2"]
atlas = ExtResource("3_cnvbm")
region = Rect2(1000, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_taapg"]
atlas = ExtResource("3_cnvbm")
region = Rect2(0, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyia5"]
atlas = ExtResource("3_cnvbm")
region = Rect2(250, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_wijg7"]
atlas = ExtResource("3_cnvbm")
region = Rect2(500, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7f6b"]
atlas = ExtResource("3_cnvbm")
region = Rect2(750, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f0mh"]
atlas = ExtResource("3_cnvbm")
region = Rect2(1000, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sm7a"]
atlas = ExtResource("3_cnvbm")
region = Rect2(0, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_bigdc"]
atlas = ExtResource("3_cnvbm")
region = Rect2(250, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxhoy"]
atlas = ExtResource("3_cnvbm")
region = Rect2(500, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7l2y"]
atlas = ExtResource("3_cnvbm")
region = Rect2(750, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5mqb"]
atlas = ExtResource("3_cnvbm")
region = Rect2(1000, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_co8ek"]
atlas = ExtResource("3_cnvbm")
region = Rect2(0, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_de5y8"]
atlas = ExtResource("3_cnvbm")
region = Rect2(250, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_505nr"]
atlas = ExtResource("3_cnvbm")
region = Rect2(500, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlnmf"]
atlas = ExtResource("3_cnvbm")
region = Rect2(750, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_rieh6"]
atlas = ExtResource("3_cnvbm")
region = Rect2(1000, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_bitm3"]
atlas = ExtResource("3_cnvbm")
region = Rect2(0, 1250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1p8r"]
atlas = ExtResource("3_cnvbm")
region = Rect2(250, 1250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5uxu"]
atlas = ExtResource("3_cnvbm")
region = Rect2(500, 1250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvw4d"]
atlas = ExtResource("3_cnvbm")
region = Rect2(750, 1250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ii8t"]
atlas = ExtResource("3_cnvbm")
region = Rect2(1000, 1250, 250, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_pi71x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqt1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1wrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g71gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81mu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgmun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv31a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8xcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbmvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v13jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svuq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taapg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyia5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wijg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7f6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f0mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sm7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bigdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxhoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7l2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5mqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co8ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de5y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_505nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlnmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rieh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bitm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1p8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5uxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvw4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ii8t")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="Animation" id="Animation_1ohxe"]
resource_name = "new_animation"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(720, 1300), Vector2(720, 1300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.90241, 1.74533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/PointLight2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.90241, 1.74533]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/PointLight2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(720, 1300), Vector2(720, 1300)]
}

[sub_resource type="Animation" id="Animation_uwsqn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-265, 639)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.245593]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/PointLight2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.90241]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/PointLight2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(720, 1300)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htimq"]
_data = {
"RESET": SubResource("Animation_uwsqn"),
"new_animation": SubResource("Animation_1ohxe")
}

[sub_resource type="Animation" id="Animation_fgx1w"]
length = 0.001

[sub_resource type="Animation" id="Animation_fvbql"]
resource_name = "face_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gbfho"]
resource_name = "face_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rwa4s"]
_data = {
"RESET": SubResource("Animation_fgx1w"),
"face_in": SubResource("Animation_fvbql"),
"face_out": SubResource("Animation_gbfho")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p4y0p")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(13.825, 0)
layout_mode = 0
offset_top = 3.0
offset_right = 1444.0
offset_bottom = 902.0

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 1449.0
offset_bottom = 899.0
color = Color(0, 0, 0, 0.462745)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TextureRect/ColorRect"]
position = Vector2(-265, 639)
rotation = -0.245593
scale = Vector2(1.756, 1.756)
sprite_frames = SubResource("SpriteFrames_pi71x")
autoplay = "default"
frame_progress = 0.937834
offset = Vector2(0, -500)

[node name="PointLight2D" type="PointLight2D" parent="TextureRect/ColorRect"]
position = Vector2(720, 1300)
rotation = -1.90241
scale = Vector2(1.756, 1.756)
color = Color(0.976471, 0.976471, 0.0431373, 0.713726)
energy = 1.52
texture = ExtResource("3_u8np7")
offset = Vector2(0, -500)
texture_scale = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 632.0
offset_top = 402.0
offset_right = 1262.0
offset_bottom = 1055.0
scale = Vector2(0.378079, 0.378079)

[node name="Jogar" type="Button" parent="TextureRect/ColorRect/VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.645746, 0.300631, 0.170564, 1)
theme_override_colors/font_pressed_color = Color(0.4, 0.172549, 0.0862745, 0.815686)
theme_override_colors/font_focus_color = Color(0.4, 0.172549, 0.0862745, 1)
theme_override_colors/font_color = Color(0.399028, 0.171773, 0.0870879, 1)
theme_override_colors/font_outline_color = Color(0.862745, 0.372549, 0, 1)
theme_override_constants/outline_size = 65
theme_override_fonts/font = ExtResource("1_xyx7m")
theme_override_font_sizes/font_size = 206
text = "Jogar"
flat = true

[node name="Creditos" type="Button" parent="TextureRect/ColorRect/VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.645746, 0.300631, 0.170564, 1)
theme_override_colors/font_pressed_color = Color(0.4, 0.172549, 0.0862745, 0.815686)
theme_override_colors/font_focus_color = Color(0.4, 0.172549, 0.0862745, 1)
theme_override_colors/font_color = Color(0.399028, 0.171773, 0.0870879, 1)
theme_override_colors/font_outline_color = Color(0.862745, 0.372549, 0, 1)
theme_override_constants/outline_size = 65
theme_override_fonts/font = ExtResource("1_xyx7m")
theme_override_font_sizes/font_size = 206
text = "Creditos
"
flat = true

[node name="Sair" type="Button" parent="TextureRect/ColorRect/VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.645746, 0.300631, 0.170564, 1)
theme_override_colors/font_pressed_color = Color(0.4, 0.172549, 0.0862745, 0.815686)
theme_override_colors/font_focus_color = Color(0.4, 0.172549, 0.0862745, 1)
theme_override_colors/font_color = Color(0.399028, 0.171773, 0.0870879, 1)
theme_override_colors/font_outline_color = Color(0.862745, 0.372549, 0, 1)
theme_override_constants/outline_size = 65
theme_override_fonts/font = ExtResource("1_xyx7m")
theme_override_font_sizes/font_size = 206
text = "Sair
"
flat = true

[node name="RogueLixo" type="Label" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 3.0
offset_top = -1.0
offset_right = 742.0
offset_bottom = 134.0
scale = Vector2(1.95664, 1.89288)
theme_override_colors/font_color = Color(0.451669, 0.180639, 0, 1)
theme_override_colors/font_shadow_color = Color(0.863197, 0.37203, 3.85046e-07, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.729412, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("1_xyx7m")
theme_override_font_sizes/font_size = 125
text = "Rogue Lixo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Btn" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 1004.0
offset_top = 76.0
offset_right = 1033.0
offset_bottom = 103.0
flat = true

[node name="btn2" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 402.0
offset_top = 138.0
offset_right = 419.0
offset_bottom = 168.0
flat = true

[node name="veigar" type="Sprite2D" parent="TextureRect/ColorRect"]
visible = false
position = Vector2(1134, 659)
texture = ExtResource("5_ht1gu")

[node name="sla" type="Sprite2D" parent="TextureRect/ColorRect"]
visible = false
position = Vector2(385, 768)
scale = Vector2(0.655914, 0.655914)
texture = ExtResource("7_ue8w4")

[node name="music2" type="AudioStreamPlayer" parent="TextureRect/ColorRect"]
stream = ExtResource("6_pcr67")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
libraries = {
"": SubResource("AnimationLibrary_htimq")
}
autoplay = "new_animation"

[node name="transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rwa4s")
}

[node name="ColorRect" type="ColorRect" parent="transition"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00184107, 0.00184107, 0.00184107, 1)

[node name="menu1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jsyvc")
volume_db = -10.0

[node name="music_menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_e55xy")
volume_db = -20.036
autoplay = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
position = Vector2(0, 3)
color = Color(0.585062, 0.585062, 0.585062, 1)

[connection signal="mouse_entered" from="TextureRect/ColorRect/VBoxContainer/Jogar" to="." method="_on_jogar_mouse_entered"]
[connection signal="pressed" from="TextureRect/ColorRect/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/VBoxContainer/Jogar" to="TextureRect/ColorRect/VBoxContainer/Jogar" method="_on_pressed"]
[connection signal="mouse_entered" from="TextureRect/ColorRect/VBoxContainer/Creditos" to="." method="_on_creditos_mouse_entered"]
[connection signal="pressed" from="TextureRect/ColorRect/VBoxContainer/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="mouse_entered" from="TextureRect/ColorRect/VBoxContainer/Sair" to="." method="_on_sair_mouse_entered"]
[connection signal="pressed" from="TextureRect/ColorRect/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/Btn" to="." method="_on_btn_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/btn2" to="." method="_on_btn_2_pressed"]
[connection signal="animation_finished" from="transition" to="." method="_on_transition_animation_finished"]
